--- a/payroll-management-system/Application.xaml
+++ b/payroll-management-system/Application.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:payroll_management_system"
-    StartupUri="MainWindow.xaml">
+    StartupUri="GenerateDBF.xaml">
     <Application.Resources>
         
     </Application.Resources>
