--- a/payroll-management-system/MainWindow.xaml
+++ b/payroll-management-system/MainWindow.xaml
@@ -3,9 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
         xmlns:local="clr-namespace:payroll_management_system"
         mc:Ignorable="d"
+        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Style>
+        <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
+    </Window.Style>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -14,7 +19,12 @@
             <RowDefinition Height="25"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-
+        <StackPanel Orientation="Horizontal">
+            <Button x:Name="btnGenerateDBF" Click="btnGenerateDBF_Click" Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}">DBF</Button>
+            <Button x:Name="btnTimeDownloader" Click="btnTimeDownloader_Click">Downloader</Button>
+            <Button x:Name="btnSettings" Click="btnSettings_Click">Settings</Button>
+        </StackPanel>
+        
         <Frame Name="frmMain" Grid.Row="1" 
                     BorderBrush="#FF786F6F" BorderThickness="0.3" Margin="5,0,5,5" 
                     NavigationUIVisibility="Hidden"/>
