--- a/payroll-management-system/ProcessPayreg.xaml
+++ b/payroll-management-system/ProcessPayreg.xaml
@@ -4,7 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:payroll_management_system"
-      mc:Ignorable="d"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
+          mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProcessPayreg">
     <Grid Margin="10">
@@ -45,7 +47,8 @@
         
         <Grid Grid.Row="2" Grid.Column="1">
             <Button x:Name="btnStartProcess" HorizontalAlignment="Right" Click="btnStartProcess_Click" Width="50">Start</Button>
-        </Grid>            
-
+        </Grid>
+        
+        <ProgressBar x:Name="pb" Grid.Row="3" Grid.ColumnSpan="2"/>
     </Grid>
 </Page>
