--- a/payroll-management-system/Application.xaml
+++ b/payroll-management-system/Application.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Application"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:payroll_management_system" 
+    xmlns:local="clr-namespace:payroll_management_app" 
     StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
