--- a/payroll-management-system/EmployeePage.xaml
+++ b/payroll-management-system/EmployeePage.xaml
@@ -3,15 +3,22 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:payroll_management_system"
+      xmlns:local="clr-namespace:payroll_management_app"
+      xmlns:py="clr-namespace:payroll_module.Employee;assembly=payroll-module"
+      xmlns:emp="clr-namespace:payroll_module.Employee;assembly=payroll-module"
       mc:Ignorable="d" 
-      xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
-        d:DesignHeight="450" d:DesignWidth="1200"
+      xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI" 
+      Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
+        d:DesignHeight="550" d:DesignWidth="1200"
       Title="EmployeePage">
+    <Page.Resources>
+        <local:FilterBinding x:Key="Filter"/>
+        <emp:EmployeeModel x:Key="Employee"/>
+    </Page.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="{adonisUi:Space 6}"/>
+            <RowDefinition Height="{adonisUi:Space 4}"/>
             <RowDefinition/>
             <RowDefinition Height="{adonisUi:Space 3}"/>
         </Grid.RowDefinitions>
@@ -20,10 +27,29 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
+        <!--FILTER-->
+        <Grid Grid.Column="1" x:Name="grd1">
+            <Grid.DataContext>
+                <Binding Source="{StaticResource Filter}" />
+            </Grid.DataContext>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{adonisUi:Space 6}"/>
+                <ColumnDefinition Width="{adonisUi:Space 36}"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Filter:" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <TextBox x:Name="tbFilter" Grid.Column="1" Margin="3" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, Delay=500}"/>
+        </Grid>
+
         <!--DETAILS-->
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" x:Name="grbEmployeeDetail">
+            <Grid.DataContext>
+                <Binding Source="{StaticResource Employee}"/>
+            </Grid.DataContext>
+            
             <Grid.RowDefinitions>
                 <RowDefinition Height="{adonisUi:Space 6}"/>
+                <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
@@ -39,9 +65,12 @@
                 <ColumnDefinition Width="{adonisUi:Space 12}"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btnSync" Click="btnSync_Click" Grid.Column="1">Sync</Button>
-
+            
             <TextBlock Text="EE ID:" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+
+            <TextBox x:Name="tbEEId" Width="140" Margin="4" IsReadOnly="True" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"  Text="{Binding Path=EE_Id}"/>
+            <Button x:Name="btnSyncEmployee" Click="btnSyncEmployee_Click" Margin="3"  Grid.Row="1" Grid.Column="1"  HorizontalAlignment="Right">Sync</Button>
+            
             <TextBlock Text="Last Name:" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="First Name:" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="Middle Name:" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Right"/>
@@ -52,44 +81,46 @@
             <TextBlock Text="Account Number:" Grid.Row="9" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="Card Number:" Grid.Row="10" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 
-            <TextBox x:Name="tbEEId" Grid.Row="1" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbLastName" Grid.Row="2" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbFirstName" Grid.Row="3" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbMiddleName" Grid.Row="4" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbTIN" Grid.Row="5" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbPayrollCode" Grid.Row="6" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbBankCategory" Grid.Row="7" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbBankName" Grid.Row="8" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbAccountNumber" Grid.Row="9" Grid.Column="1" Margin="4" IsReadOnly="True"/>
-            <TextBox x:Name="tbCardNumber" Grid.Row="10" Grid.Column="1" Margin="4" IsReadOnly="True"/>
+            <TextBox x:Name="tbLastName" Grid.Row="2" Grid.Column="1" Margin="4" Text="{Binding Path=Last_Name}" />
+            <TextBox x:Name="tbFirstName" Grid.Row="3" Grid.Column="1" Margin="4" Text="{Binding Path=First_Name}" />
+            <TextBox x:Name="tbMiddleName" Grid.Row="4" Grid.Column="1" Margin="4" Text="{Binding Path=Middle_Name}" />
+            <TextBox x:Name="tbTIN" Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=TIN}" />
+            <TextBox x:Name="tbPayrollCode" Grid.Row="6" Grid.Column="1" Margin="4" Text="{Binding Path=Payroll_Code}" />
+            <TextBox x:Name="tbBankCategory" Grid.Row="7" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Category}" />
+            <TextBox x:Name="tbBankName" Grid.Row="8" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Name}" />
+            <TextBox x:Name="tbAccountNumber" Grid.Row="9" Grid.Column="1" Margin="4" Text="{Binding Path=Account_Number}" />
+            <TextBox x:Name="tbCardNumber" Grid.Row="10" Grid.Column="1" Margin="4" Text="{Binding Path=Card_Number}"/>
+
+            <Button x:Name="btnSave" Click="btnSave_Click" Grid.Row="11" Grid.Column="1" Margin="4" HorizontalAlignment="Right" Background="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentForegroundBrush}}">Save</Button>
         </Grid>
-        
-        
+
+
         <!--LIST VIEW-->
         <Border BorderBrush="Gainsboro" Grid.Row="1" Grid.Column="1">
-            
-        <DataGrid x:Name="lstEmployees" Margin="3"
+
+            <DataGrid x:Name="lstEmployees" Margin="3"
                     AutoGenerateColumns="False"
                     HorizontalAlignment="Left"
                     IsReadOnly="True"
                     CanUserAddRows="False"
                     CanUserDeleteRows="False"
-                    CanUserSortColumns="True">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="EE Id" Width="50" Binding="{Binding EE_Id}"/>
-                <DataGridTextColumn Header="Last Name" Width="120" Binding="{Binding Last_Name}"/>
-                <DataGridTextColumn Header="First Name" Width="120" Binding="{Binding First_Name}"/>
-                <DataGridTextColumn Header="Middle Name" Width="120" Binding="{Binding Middle_Name}"/>
-                <DataGridTextColumn Header="TIN" Width="75" Binding="{Binding TIN}"/>
-                <DataGridTextColumn Header="Payroll Code" Width="75" Binding="{Binding Payroll_Code}"/>
-                <DataGridTextColumn Header="Bank Category" Width="100" Binding="{Binding Bank_Category}"/>
-                <DataGridTextColumn Header="Bank Name" Width="75" Binding="{Binding Bank_Name}"/>
-                <DataGridTextColumn Header="Account Number" Width="100" Binding="{Binding Account_Number}"/>
-                <DataGridTextColumn Header="Card Number" Width="100" Binding="{Binding Card_Number}"/>
-            </DataGrid.Columns>
-        </DataGrid>
+                    CanUserSortColumns="True"
+                  >
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="EE Id" Width="50" Binding="{Binding EE_Id}"/>
+                    <DataGridTextColumn Header="Last Name" Width="120" Binding="{Binding Last_Name}"/>
+                    <DataGridTextColumn Header="First Name" Width="120" Binding="{Binding First_Name}"/>
+                    <DataGridTextColumn Header="Middle Name" Width="120" Binding="{Binding Middle_Name}"/>
+                    <DataGridTextColumn Header="TIN" Width="75" Binding="{Binding TIN}"/>
+                    <DataGridTextColumn Header="Payroll Code" Width="75" Binding="{Binding Payroll_Code}"/>
+                    <DataGridTextColumn Header="Bank Category" Width="100" Binding="{Binding Bank_Category}"/>
+                    <DataGridTextColumn Header="Bank Name" Width="75" Binding="{Binding Bank_Name}"/>
+                    <DataGridTextColumn Header="Account Number" Width="100" Binding="{Binding Account_Number}"/>
+                    <DataGridTextColumn Header="Card Number" Width="100" Binding="{Binding Card_Number}"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </Border>
-        
+
         <!--PROGRESS & STATUS MESSAGES-->
         <TextBlock x:Name="lbStatus" Grid.Row="2" Text="Syncing Complete!!" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <ProgressBar x:Name="pb" Grid.Row="2" Grid.Column="1"></ProgressBar>
