--- a/payroll-management-system/EmployeePage.xaml
+++ b/payroll-management-system/EmployeePage.xaml
@@ -1,11 +1,11 @@
 ﻿<Page x:Class="EmployeePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:payroll_management_app"
-      xmlns:py="clr-namespace:payroll_module.Employee;assembly=payroll-module"
-      xmlns:emp="clr-namespace:payroll_module.Employee;assembly=payroll-module"
+      xmlns:emp="clr-namespace:employee_module;assembly=employee-module"
       mc:Ignorable="d" 
       xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI" 
       Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
@@ -23,9 +23,17 @@
             <RowDefinition Height="{adonisUi:Space 3}"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="{adonisUi:Space 36}"/>
+            <ColumnDefinition Width="{adonisUi:Space 60}"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <!--MENU-->
+
+        <DockPanel>
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Click="btnSync_Click" Header="Sync All"/>
+                <MenuItem Header="Import"/>
+            </Menu>
+        </DockPanel>
 
         <!--FILTER-->
         <Grid Grid.Column="1" x:Name="grd1">
@@ -38,7 +46,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="Filter:" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-            <TextBox x:Name="tbFilter" Grid.Column="1" Margin="3" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, Delay=500}"/>
+            <TextBox x:Name="tbFilter" Grid.Column="1" Margin="3" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, Delay=500}" adonisExtensions:WatermarkExtension.Watermark="Search ..."/>
         </Grid>
 
         <!--DETAILS-->
@@ -46,9 +54,9 @@
             <Grid.DataContext>
                 <Binding Source="{StaticResource Employee}"/>
             </Grid.DataContext>
-            
+
             <Grid.RowDefinitions>
-                <RowDefinition Height="{adonisUi:Space 6}"/>
+                <!--<RowDefinition Height="{adonisUi:Space 6}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
@@ -59,19 +67,19 @@
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
                 <RowDefinition Height="{adonisUi:Space 4}"/>
-                <RowDefinition Height="{adonisUi:Space 4}"/>
+                <RowDefinition Height="{adonisUi:Space 4}"/>-->
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="{adonisUi:Space 12}"/>
+                <!--<ColumnDefinition Width="{adonisUi:Space 4}"/>-->
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            
-            <TextBlock Text="EE ID:" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 
-            <TextBox x:Name="tbEEId" Width="140" Margin="4" IsReadOnly="True" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"  Text="{Binding Path=EE_Id}"/>
-            <Button x:Name="btnSyncEmployee" Click="btnSyncEmployee_Click" Margin="3"  Grid.Row="1" Grid.Column="1"  HorizontalAlignment="Right">Sync</Button>
-            
-            <TextBlock Text="Last Name:" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+            <!--<TextBlock Text="EE ID:" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Right"/>-->
+
+            <!--<TextBox x:Name="tbEEId" Width="140" Margin="4" IsReadOnly="True" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"  Text="{Binding Path=EE_Id}" adonisExtensions:WatermarkExtension.Watermark="EE ID"/>
+            <Button x:Name="btnSyncEmployee" Click="btnSyncEmployee_Click" Margin="3"  Grid.Row="1" Grid.Column="1"  HorizontalAlignment="Right">Sync</Button>-->
+
+            <!--<TextBlock Text="Last Name:" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="First Name:" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="Middle Name:" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="TIN:" Grid.Row="5" VerticalAlignment="Center" HorizontalAlignment="Right"/>
@@ -79,19 +87,37 @@
             <TextBlock Text="Bank Category:" Grid.Row="7" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="Bank Name:" Grid.Row="8" VerticalAlignment="Center" HorizontalAlignment="Right"/>
             <TextBlock Text="Account Number:" Grid.Row="9" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-            <TextBlock Text="Card Number:" Grid.Row="10" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-
-            <TextBox x:Name="tbLastName" Grid.Row="2" Grid.Column="1" Margin="4" Text="{Binding Path=Last_Name}" />
-            <TextBox x:Name="tbFirstName" Grid.Row="3" Grid.Column="1" Margin="4" Text="{Binding Path=First_Name}" />
-            <TextBox x:Name="tbMiddleName" Grid.Row="4" Grid.Column="1" Margin="4" Text="{Binding Path=Middle_Name}" />
-            <TextBox x:Name="tbTIN" Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=TIN}" />
-            <TextBox x:Name="tbPayrollCode" Grid.Row="6" Grid.Column="1" Margin="4" Text="{Binding Path=Payroll_Code}" />
-            <TextBox x:Name="tbBankCategory" Grid.Row="7" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Category}" />
-            <TextBox x:Name="tbBankName" Grid.Row="8" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Name}" />
-            <TextBox x:Name="tbAccountNumber" Grid.Row="9" Grid.Column="1" Margin="4" Text="{Binding Path=Account_Number}" />
-            <TextBox x:Name="tbCardNumber" Grid.Row="10" Grid.Column="1" Margin="4" Text="{Binding Path=Card_Number}"/>
-
-            <Button x:Name="btnSave" Click="btnSave_Click" Grid.Row="11" Grid.Column="1" Margin="4" HorizontalAlignment="Right" Background="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentForegroundBrush}}">Save</Button>
+            <TextBlock Text="Card Number:" Grid.Row="10" VerticalAlignment="Center" HorizontalAlignment="Right"/>-->
+            <StackPanel>
+                <GroupBox Header="Personal" Grid.Column="1" Grid.RowSpan="3" Margin="4">
+                    <StackPanel>
+                        <TextBox x:Name="tbEEId" Width="{adonisUi:Space 12}" Margin="4" IsReadOnly="True" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left"  Text="{Binding Path=EE_Id}" adonisExtensions:WatermarkExtension.Watermark="EE ID"/>
+                        <WrapPanel>
+                            <TextBox x:Name="tbLastName" Width="{adonisUi:Space 18}" Grid.Row="2" Grid.Column="1" Margin="4" Text="{Binding Path=Last_Name}" adonisExtensions:WatermarkExtension.Watermark="Last Name"/>
+                            <TextBox x:Name="tbFirstName" Width="{adonisUi:Space 18}"  Grid.Row="3" Grid.Column="1" Margin="4" Text="{Binding Path=First_Name}" adonisExtensions:WatermarkExtension.Watermark="First Name" />
+                            <TextBox x:Name="tbMiddleName" Width="{adonisUi:Space 18}"  Grid.Row="4" Grid.Column="1" Margin="4" Text="{Binding Path=Middle_Name}" adonisExtensions:WatermarkExtension.Watermark="Middle Name"  />
+                        </WrapPanel>
+                    </StackPanel>
+                </GroupBox>
+                <GroupBox Header="Payroll" Grid.Column="1" Grid.RowSpan="3" Margin="4">
+                    <WrapPanel>
+                        <TextBox x:Name="tbPayrollCode" Width="{adonisUi:Space 18}"  Grid.Row="6" Grid.Column="1" Margin="4" Text="{Binding Path=Payroll_Code}" adonisExtensions:WatermarkExtension.Watermark="Payroll Code"  />
+                        <TextBox x:Name="tbBankCategory" Width="{adonisUi:Space 18}"  Grid.Row="7" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Category}" adonisExtensions:WatermarkExtension.Watermark="Bank Category"  />
+                        <TextBox x:Name="tbBankName"  Width="{adonisUi:Space 18}" Grid.Row="8" Grid.Column="1" Margin="4" Text="{Binding Path=Bank_Name}" adonisExtensions:WatermarkExtension.Watermark="Bank Name"  />
+                        <TextBox x:Name="tbAccountNumber" Width="{adonisUi:Space 18}"  Grid.Row="9" Grid.Column="1" Margin="4" Text="{Binding Path=Account_Number}" adonisExtensions:WatermarkExtension.Watermark="Account Number"  />
+                        <TextBox x:Name="tbCardNumber" Width="{adonisUi:Space 18}"  Grid.Row="10" Grid.Column="1" Margin="4" Text="{Binding Path=Card_Number}" adonisExtensions:WatermarkExtension.Watermark="Card Number" />
+                    </WrapPanel>
+                </GroupBox>
+                <GroupBox Header="Government" Grid.Column="1" Grid.RowSpan="3" Margin="4">
+                    <WrapPanel>
+                        <TextBox x:Name="tbTIN" Width="{adonisUi:Space 18}"  Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=TIN}" adonisExtensions:WatermarkExtension.Watermark="TIN" ToolTip="asdasd"/>
+                        <TextBox x:Name="tbPagibig" Width="{adonisUi:Space 18}"  Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=Pagibig}" adonisExtensions:WatermarkExtension.Watermark="Pagibig"/>
+                        <TextBox x:Name="tbSSS" Width="{adonisUi:Space 18}"  Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=SSS}" adonisExtensions:WatermarkExtension.Watermark="SSS"/>
+                        <TextBox x:Name="tbPhilHealth" Width="{adonisUi:Space 18}"  Grid.Row="5" Grid.Column="1" Margin="4" Text="{Binding Path=PhilHealth}" adonisExtensions:WatermarkExtension.Watermark="PhilHealth"/>
+                    </WrapPanel>
+                </GroupBox>
+                <Button x:Name="btnSave" Click="btnSave_Click" Grid.Row="11" Grid.Column="1" Margin="4" HorizontalAlignment="Right" Background="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentForegroundBrush}}">Save</Button>
+            </StackPanel>
         </Grid>
 
 
@@ -117,6 +143,9 @@
                     <DataGridTextColumn Header="Bank Name" Width="75" Binding="{Binding Bank_Name}"/>
                     <DataGridTextColumn Header="Account Number" Width="100" Binding="{Binding Account_Number}"/>
                     <DataGridTextColumn Header="Card Number" Width="100" Binding="{Binding Card_Number}"/>
+                    <DataGridTextColumn Header="Pagibig" Width="100" Binding="{Binding Pagibig}"/>
+                    <DataGridTextColumn Header="SSS" Width="100" Binding="{Binding SSS}"/>
+                    <DataGridTextColumn Header="PhilHealth" Width="100" Binding="{Binding PhilHealth}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Border>
