--- a/payroll-management-system/MainWindow.xaml
+++ b/payroll-management-system/MainWindow.xaml
@@ -22,9 +22,9 @@
         <StackPanel Orientation="Horizontal">
             <Button x:Name="btnGenerateDBF" Click="btnGenerateDBF_Click" Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}">DBF</Button>
             <Button x:Name="btnTimeDownloader" Click="btnTimeDownloader_Click">Downloader</Button>
+            <Button x:Name="btnEmployee" Click="btnEmployee_Click">Employee</Button>
+            <Button x:Name="btnProcessPayroll" Click="btnProcessPayroll_Click">Payroll</Button>
             <Button x:Name="btnSettings" Click="btnSettings_Click">Settings</Button>
-            <Button x:Name="btnEmployee" Click="btnEmployee_Click">Settings</Button>
-            <Button x:Name="btnProcessPayroll" Click="btnProcessPayroll_Click">Settings</Button>
         </StackPanel>
         
         <Frame Name="frmMain" Grid.Row="1" 
