--- a/payroll-management-system/Application.xaml
+++ b/payroll-management-system/Application.xaml
@@ -6,6 +6,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonStyle.xaml"/>
+                <ResourceDictionary Source="Theme/SubMenuButtonStyle.xaml"/>
+                <ResourceDictionary Source="Theme/ProfileButtonStyle.xaml"/>
+                <ResourceDictionary Source="Theme/PrimaryButton.xaml"/>
+
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
