--- a/payroll-management-system/TimeDownloaderPage.xaml
+++ b/payroll-management-system/TimeDownloaderPage.xaml
@@ -1,14 +1,15 @@
 ﻿<Page x:Class="TimeDownloaderPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:payroll_management_app"
-      mc:Ignorable="d" 
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:payroll_management_app"
+        mc:Ignorable="d" 
         xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+        xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
         Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="TimeDownloaderPage">
+        d:DesignHeight="450" d:DesignWidth="800"
+        Title="TimeDownloaderPage">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="45"/>
