--- a/payroll-management-system/Page/Employee/EmployeePage.xaml
+++ b/payroll-management-system/Page/Employee/EmployeePage.xaml
@@ -44,7 +44,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TextBlock Text="Filter:" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-            <TextBox x:Name="tbFilter" Grid.Column="1" Margin="3" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, Delay=500}" adonisExtensions:WatermarkExtension.Watermark="Search ..."/>
+            <TextBox x:Name="tbFilter" Grid.Column="1" Margin="3" Text="{Binding Path=Filter, UpdateSourceTrigger=PropertyChanged, Delay=500}" Background="{DynamicResource {x:Static adonisUi:Brushes.Layer2BackgroundBrush}}" adonisExtensions:WatermarkExtension.Watermark="Search ..."/>
         </Grid>
 
         <!--DETAILS-->
@@ -84,7 +84,6 @@
                 <Button x:Name="btnSave" Click="btnSave_Click" Grid.Row="11" Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}">Save</Button>
             </StackPanel>
         </Grid>
-
 
         <!--LIST VIEW-->
         <Border Grid.Row="1" Grid.Column="1">
