--- a/payroll-management-system/Theme/RegularTextbox.xaml
+++ b/payroll-management-system/Theme/RegularTextbox.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                    xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RegularTextBox" TargetType="TextBox">
         <Style.Setters>
             <Setter Property="Margin" Value="3,8,3,3"/>
